--- a/app/views/device_pools/new.html.erb
+++ b/app/views/device_pools/new.html.erb
@@ -1,5 +1,5 @@
 <div id="page-header">
-  <h1>New Device Pool</h1>
+  <h1>translate_helper("new_device_pool")</h1>
 </div>
 
 <%= render :partial=>"form" %>
