--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,2 @@
-<p>Welcome <%= @email %>!</p>
-
-<p>You can confirm your account email through the link below:</p>
-
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<%- link = link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %>
+<%= translate_helper("confirmation_instructions_email", email: @email, link: link %>
