--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h2><%= translate_helper("new_password_heading")</h2>
+<h2><%= translate_helper("new_password_heading")%></h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
@@ -9,7 +9,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "submit_new_password_form" %>
+    <%= f.submit translate_helper("submit_new_password_form") %>
   </div>
 <% end %>
 
