recurring dispatch matches dispatch

--- a/app/views/recurring_dispatchers/_run_trips_panel.html.haml
+++ b/app/views/recurring_dispatchers/_run_trips_panel.html.haml
@@ -1,7 +1,7 @@
 :ruby
   assignments = run.weekday_assignments.for_wday(@day_of_week)
   trips = RepeatingTrip.where(id: assignments.pluck(:repeating_trip_id))
-.panel.panel-success.run_trips_panel{id: "run_trips_panel_#{run.id}", data: {run_id: run.id}}
+.panel.panel-success.expandable.run_trips_panel{id: "run_trips_panel_#{run.id}", data: {run_id: run.id}}
   .panel-heading
     .pull-right
       = render 'unschedule_trip_dropdown'
