--- a/app/views/recurring_dispatchers/_runs_panel.html.haml
+++ b/app/views/recurring_dispatchers/_runs_panel.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-primary#runs_panel
+.panel.panel-primary.expandable#runs_panel
   .panel-heading
     .pull-right
       - if can?(:new, RepeatingRun)
