--- a/app/views/recurring_dispatchers/_unassigned_trips_panel.html.haml
+++ b/app/views/recurring_dispatchers/_unassigned_trips_panel.html.haml
@@ -1,4 +1,4 @@
-.panel.panel-warning#unassigned_trips_panel{style: 'margin: 0px;'}
+.panel.panel-warning.expandable#unassigned_trips_panel
   .panel-heading
     .pull-right
       = render 'unassigned_trips_schedule_dropdown'
