--- a/app/views/dispatchers/_unassigned_trips_panel.html.haml
+++ b/app/views/dispatchers/_unassigned_trips_panel.html.haml
@@ -7,7 +7,7 @@
   when Run::CAB_RUN_ID
     @cab_trips
   end
-.panel.expandable.panel-warning#unassigned_trips_panel{style: 'margin: 0px;'}
+.panel.expandable.panel-warning#unassigned_trips_panel
   .panel-heading
     .pull-right
       = render 'unassigned_trip_type_dropdown'
