runs form fixes and better sortable table headers

--- a/app/assets/stylesheets/_ridepilot-ui-helpers.scss
+++ b/app/assets/stylesheets/_ridepilot-ui-helpers.scss
@@ -168,7 +168,7 @@ $panel-border: 1px solid $gray-2;
 }
 
 @mixin form-label {
-  font-size: .875em;
+  font-size: .95em;
   font-weight: 400;
   padding: 0;
   margin: 0;
@@ -259,3 +259,8 @@ img {
   @include box-shadow($blur: 0px, $spread: 1px, $opacity: 1, $color: currentColor, $inset: inset);
 }
 
+@mixin panel-heading {
+  color: $brand-primary;
+  font-weight: 600;
+  font-size: 16px;
+}
