--- a/app/views/runs/_form.html.haml
+++ b/app/views/runs/_form.html.haml
@@ -18,31 +18,32 @@
         - @run.errors.full_messages.each do |msg| 
           %li= msg
 
-  .col-sm-12
-    .form-group
-      .form-label
-        = f.label :name, translate_helper("name") 
-      .form-field
-        = f.text_field :name, class: 'form-control', required: true
+  .row
+    .col-sm-12.col-md-6
+      .form-group.name
+        .form-label
+          = f.label :name, translate_helper("name") 
+        .form-field
+          = f.text_field :name, class: 'form-control', required: true
+  .row
+    .col-sm-12.col-md-6
+      = render 'runs/date_time_panel', f: f, edit_mode: edit_mode
+      - if !@is_repeating_run && edit_mode == :show
+        = render 'runs/distance_panel' if @run.run_distance.present?
+        = render 'runs/tracking_panel' if current_provider.run_tracking?
+    .col-sm-12.col-md-6
+      = render 'repeating_runs/repetition_panel', f: f if @is_repeating_run
+      = render 'runs/vehicle_panel', f: f , edit_mode: edit_mode
+      = render 'runs/driver_panel', f: f, edit_mode: edit_mode 
+      = render 'runs/run_completion_panel', f: f, edit_mode: edit_mode if !@is_repeating_run
+      - if edit_mode == :show
+        - logs = TrackerActionLog.for(@run).order(created_at: :desc)
+        = render 'shared/action_log_panel', logs: logs if logs.any?
 
-  .col-sm-12.col-md-6
-    = render 'runs/date_time_panel', f: f, edit_mode: edit_mode
-    - if !@is_repeating_run && edit_mode == :show
-      = render 'runs/distance_panel' if @run.run_distance.present?
-      = render 'runs/tracking_panel' if current_provider.run_tracking?
-  .col-sm-12.col-md-6
-    = render 'repeating_runs/repetition_panel', f: f if @is_repeating_run
-    = render 'runs/vehicle_panel', f: f , edit_mode: edit_mode
-    = render 'runs/driver_panel', f: f, edit_mode: edit_mode 
-    = render 'runs/run_completion_panel', f: f, edit_mode: edit_mode if !@is_repeating_run
-    - if edit_mode == :show
-      - logs = TrackerActionLog.for(@run).order(created_at: :desc)
-      = render 'shared/action_log_panel', logs: logs if logs.any?
-
-  - unless @is_repeating_run
-    .col-sm-12
-      - if edit_mode != :new 
-        = render 'runs/trip_list', f: f, edit_mode: edit_mode 
+    - unless @is_repeating_run
+      .col-sm-12
+        - if edit_mode != :new 
+          = render 'runs/trip_list', f: f, edit_mode: edit_mode 
 
 - if edit_mode != :show
   :javascript
