first things first, window.innerheight more appropriate than window.outerheight

--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -301,7 +301,7 @@
   // window height changes, then need to update splitter position and container height
   function on_window_resize() {
     var prev_height = $('#dispatch_runs_trips').height();
-    var new_height = $(window).outerHeight() - 180; // exclude page nav bar and footer height
+    var new_height = $(window).innerHeight() - 180; // exclude page nav bar and footer height
     $('#dispatch_runs_trips').height(new_height);
     if(splitter) {
       var prev_pos = splitter.position();
@@ -333,7 +333,7 @@
   // page main entry point
   $(function() {  
     // init the splitter between Runs section and Trips section
-    var splitter_height = $(window).outerHeight() - 200;
+    var splitter_height = $(window).innerHeight() - 200;
     splitter = $('#dispatch_runs_trips').height(splitter_height).split({
       position: '80%',
       limit: 40,
