update all_day availability style and fix trips listing query

--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -433,7 +433,7 @@ fieldset {
 		    background-color: #ffe664;
 		  }
 
-		  &.is_filled, .is_all_day_filled {
+		  &.is_filled, &.is_all_day_filled {
 		    background-color: #3eb76a;
 		  }
 	  }
