minor style tweak to increase opacity to right end of alert so white text can still be seen; plus update planned leave form spacing

--- a/app/assets/stylesheets/ridepilot-ui.scss
+++ b/app/assets/stylesheets/ridepilot-ui.scss
@@ -112,7 +112,7 @@ fieldset {
 
 .alert-info, .alert, .alert-danger {
 	background: $brand-primary;
-	@include gradient-horiz($brand-primary);
+	@include gradient-horiz($brand-primary, $brand-primary, 1, 0.2);
 	border: none;
 	border-radius: 0px;
 	color: $white;
